--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
             to software developer. I have also had seven years experience as an
             aircraft maintenance engineer. I have been learning web development
             through several resources, including Udemy, Freecodecamp, Codecademy
-            and MDN. My interests include hiking, golf and diving. I have recently 
-            started blogging about my self-taught journey through Medium. 
+            and MDN. My interests include hiking, golf and diving. I have
+            recently started blogging about my self-taught journey through
+            Medium.
           </p>
           <address>
             <div>
@@ -140,7 +141,7 @@
       </div>
       <div id="portfolio">
         <h2>Portfolio</h2>
-        <h4>My projects</h4>
+        <h3>My projects</h3>
         <div id="projects">
           <div id="project1">Project 1</div>
           <div id="project2">Project 2</div>
@@ -182,8 +183,11 @@
           ><i class="fa-solid fa-envelope"></i
         ></a>
         <a href="tel:+64223921209"><i class="fa-solid fa-mobile-screen"></i></a>
-        <a href="https://medium.com/@kurt.donaldson.nz/self-taught-software-developer-progress-f9d3ef137ef4" target="_blank"
-          ><i class="fa-brands fa-medium"></i></a>
+        <a
+          href="https://medium.com/@kurt.donaldson.nz/self-taught-software-developer-progress-f9d3ef137ef4"
+          target="_blank"
+          ><i class="fa-brands fa-medium"></i
+        ></a>
       </div>
     </main>
 
