--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           target="_blank"
           ><i class="fa-brands fa-linkedin"></i
         ></a>
-        <a href="https://github.com/DONNY345/DONNY345" target="_blank"
+        <a href="https://github.com/kurtdonaldson" target="_blank"
           ><i class="fa-brands fa-github"></i
         ></a>
         <a href="mailto:kurt.donaldson.nz@gmail.com"
