--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
             through several resources, including Udemy, Freecodecamp, Codecademy
             and MDN. My interests include hiking, golf and diving. I have
             recently started blogging about my self-taught journey through
-            Medium.
+            <a
+              id="medium-anchor"
+              href="https://medium.com/@kurt.donaldson.nz/publishing-my-portfolio-on-github-ffeaffa6a80b"
+              >Medium</a
+            >.
           </p>
           <address>
             <div>
