form submit changes

--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@
       <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-details">
-          <form action="">
+          <form
+            action="https://getform.io/f/eca318f0-9de0-46d2-933a-1f70fb5eb1ca"
+            method="post"
+          >
             <input type="text" id="name" name="name" placeholder="Name" />
             <input type="email" id="email" name="email" placeholder="Email" />
             <input
