--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <img class="nav_profile" src="Profile_pic.jpg" alt="profile_pic" />
+      <img class="nav_profile" src="images/Profile_pic.jpg" alt="profile_pic" />
       <h4>Kurt Donaldson</h4>
       <ul>
         <li>
@@ -110,35 +110,31 @@
         <div id="skills">
           <div id="skills-border">
             <h2 id="skills-heading">Skills</h2>
-            <div class="ul">
-              <ul>
-                <li>
-                  <h4>HTML</h4>
-                </li>
-                <li>
-                  <h4>Javascript</h4>
-                </li>
-                <li>
-                  <h4>Express</h4>
-                </li>
-                <li>
-                  <h4>Git and Github</h4>
-                </li>
-              </ul>
-              <ul>
-                <li>
-                  <h4>CSS</h4>
-                </li>
-                <li>
-                  <h4>Node JS</h4>
-                </li>
-                <li>
-                  <h4>MongoDB</h4>
-                </li>
-                <li>
-                  <h4>REST API</h4>
-                </li>
-              </ul>
+            <div class="icon_container">
+              <div class="icons">
+                <img src="icons/icons8-html-5.svg"  alt="html_logo" loading="lazy">
+              </div>
+              <div class="icons">
+                <img src="icons/icons8-css3.svg"  alt="css_logo" loading="lazy">
+              </div>
+              <div class="icons">
+                <img src="icons/icons8-javascript.svg"  alt="javascript_logo" loading="lazy">
+              </div>
+              <div class="icons">
+                <img src="icons/icons8-nodejs.svg"  alt="node_logo" loading="lazy">
+              </div>
+              <div class="icons">
+                <img src="icons/icons8-bootstrap.svg"  alt="bootstrap_logo" loading="lazy">
+              </div>
+              <div class="icons">
+                <img src="icons/icons8-mongodb.svg"  alt="mongodb_logo" loading="lazy">
+              </div>
+              <div class="icons">
+                <img src="icons/icons8-git.svg" alt="git_logo" loading="lazy">
+              </div>
+              <div class="icons">
+                <img src="icons/icons8-github.svg"  alt="github_logo" loading="lazy">
+              </div>  
             </div>
           </div>
         </div>
@@ -200,3 +196,35 @@
     <script src="apps.js"></script>
   </body>
 </html>
+
+
+<!-- <div class="ul">
+  <ul id="icon_ul">
+    <li>
+      <img src="icons/icons8-html-5.svg" class="icons" alt="html_logo" loading="lazy">
+    </li>
+    <li>
+      <img src="icons/icons8-javascript.svg" class="icons" alt="javascript_logo" loading="lazy">
+    </li>
+    <li>
+      <img src="icons/icons8-nodejs.svg" class="icons" alt="node_logo" loading="lazy">
+    </li>
+    <li>
+      <img src="icons/icons8-git.svg" class="icons" alt="git_logo" loading="lazy">
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <img src="icons/icons8-css3.svg" class="icons" alt="css_logo" loading="lazy">
+    </li>
+    <li>
+      <img src="icons/icons8-bootstrap.svg" class="icons" alt="bootstrap_logo" loading="lazy">
+    </li>
+    <li>
+      <img src="icons/icons8-mongodb.svg" class="icons" alt="mongodb_logo" loading="lazy">
+    </li>
+    <li>
+      <img src="icons/icons8-github.svg" class="icons" alt="github_logo" loading="lazy">
+    </li>
+  </ul>
+</div> -->
