--- a/index.html
+++ b/index.html
@@ -112,28 +112,29 @@
             <h2 id="skills-heading">Skills</h2>
             <div class="icon_container">
               <div class="icons">
-                <img src="icons/icons8-html-5.svg"  alt="html_logo" loading="lazy">
+                <h2>HTML</h2>
+                <img id="html-logo" src="icons/icons8-html-5.svg"  alt="html_logo" loading="lazy">
               </div>
               <div class="icons">
-                <img src="icons/icons8-css3.svg"  alt="css_logo" loading="lazy">
+                <img id="css-logo" src="icons/icons8-css3.svg"  alt="css_logo" loading="lazy">
               </div>
               <div class="icons">
-                <img src="icons/icons8-javascript.svg"  alt="javascript_logo" loading="lazy">
+                <img id="js-logo" src="icons/icons8-javascript.svg"  alt="javascript_logo" loading="lazy">
               </div>
               <div class="icons">
-                <img src="icons/icons8-nodejs.svg"  alt="node_logo" loading="lazy">
+                <img id="node-logo" src="icons/icons8-nodejs.svg"  alt="node_logo" loading="lazy">
               </div>
               <div class="icons">
-                <img src="icons/icons8-bootstrap.svg"  alt="bootstrap_logo" loading="lazy">
+                <img id="bs-logo" src="icons/icons8-bootstrap.svg"  alt="bootstrap_logo" loading="lazy">
               </div>
               <div class="icons">
-                <img src="icons/icons8-mongodb.svg"  alt="mongodb_logo" loading="lazy">
+                <img id="mongo-logo" src="icons/icons8-mongodb.svg"  alt="mongodb_logo" loading="lazy">
               </div>
               <div class="icons">
-                <img src="icons/icons8-git.svg" alt="git_logo" loading="lazy">
+                <img id="git-logo" src="icons/icons8-git.svg" alt="git_logo" loading="lazy">
               </div>
               <div class="icons">
-                <img src="icons/icons8-github.svg"  alt="github_logo" loading="lazy">
+                <img id="github-logo" src="icons/icons8-github.svg"  alt="github_logo" loading="lazy">
               </div>  
             </div>
           </div>
