--- a/index.html
+++ b/index.html
@@ -144,9 +144,19 @@
         <h2>Portfolio</h2>
         <h3>My projects</h3>
         <div id="projects">
-          <div id="project1">Project 1</div>
-          <div id="project2">Project 2</div>
-          <div id="project3">Project 3</div>
+          <div id="project1">
+            <div id="golf-weather-app">
+              <h4 class="project-heading">Golf Weather App</h4>
+             <a href="#home-page"><div id="golf-image"></div></a> 
+            </div>
+          </div>
+          <div id="project2">
+            <div id="bodyfat-app">
+              <h4 class="project-heading">Bodyfat Calculator</h4>
+            <a href="#home-page"><div id="bodyfat-image"></div></a>  
+            </div>
+          </div>
+
         </div>
       </div>
       <div id="contact">
