--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div>
               <div id="contact-number" class="contact-info">
-                <span class="contact-heading">Number:</span> 0223921209
+                <span class="contact-heading">Number:</span> +64 223921209
               </div>
               <div id="contact-from" class="contact-info">
                 <span class="contact-heading">From:</span> Auckland, New Zealand
