--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div id="project1">
             <div id="golf-weather-app">
               <h4 class="project-heading">Golf Weather App</h4>
-             <a href="https://dancing-muffin-2aa3be.netlify.app/"><div id="golf-image"></div></a> 
+             <a href="https://dancing-muffin-2aa3be.netlify.app/" target="_blank"><div id="golf-image"></div></a> 
             </div>
           </div>
           <div id="project2">
