--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="buttons">
-        <a href="#"><button id="resume-button">Resume</button></a>
+        <a href="https://drive.google.com/file/d/1BUMUqawCbf_-hEU__4TEgvrf32XJf9MX/view?usp=sharing" target="_blank"><button id="resume-button">Resume</button></a>
         <a href="#portfolio"><button id="work-button">My Work</button></a>
       </div>
       <div id="home-page">
@@ -153,7 +153,7 @@
           <div id="project2">
             <div id="bodyfat-app">
               <h4 class="project-heading">Bodyfat Calculator</h4>
-            <a href="#home-page"><div id="bodyfat-image"></div></a>  
+            <a href="https://github.com/kurtdonaldson/bodyfat-calculator" target="_blank"><div id="bodyfat-image"></div></a>  
             </div>
           </div>
 
@@ -209,33 +209,3 @@
 </html>
 
 
-<!-- <div class="ul">
-  <ul id="icon_ul">
-    <li>
-      <img src="icons/icons8-html-5.svg" class="icons" alt="html_logo" loading="lazy">
-    </li>
-    <li>
-      <img src="icons/icons8-javascript.svg" class="icons" alt="javascript_logo" loading="lazy">
-    </li>
-    <li>
-      <img src="icons/icons8-nodejs.svg" class="icons" alt="node_logo" loading="lazy">
-    </li>
-    <li>
-      <img src="icons/icons8-git.svg" class="icons" alt="git_logo" loading="lazy">
-    </li>
-  </ul>
-  <ul>
-    <li>
-      <img src="icons/icons8-css3.svg" class="icons" alt="css_logo" loading="lazy">
-    </li>
-    <li>
-      <img src="icons/icons8-bootstrap.svg" class="icons" alt="bootstrap_logo" loading="lazy">
-    </li>
-    <li>
-      <img src="icons/icons8-mongodb.svg" class="icons" alt="mongodb_logo" loading="lazy">
-    </li>
-    <li>
-      <img src="icons/icons8-github.svg" class="icons" alt="github_logo" loading="lazy">
-    </li>
-  </ul>
-</div> -->
