--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div id="project2">
             <div id="bodyfat-app">
               <h4 class="project-heading">Bodyfat Calculator</h4>
-            <a href="https://github.com/kurtdonaldson/bodyfat-calculator" target="_blank"><div id="bodyfat-image"></div></a>  
+            <a href="https://youtu.be/0AtGr5YKFcM" target="_blank"><div id="bodyfat-image"></div></a>  
             </div>
           </div>
 
