--- a/index.html
+++ b/index.html
@@ -146,18 +146,29 @@
         <div id="projects">
           <div id="project1">
             <div id="golf-weather-app">
-              <h4 class="project-heading">Golf Weather App</h4>
+            
              <a href="https://dancing-muffin-2aa3be.netlify.app/" target="_blank"><div id="golf-image"></div></a> 
+            </div>
+            <div id="project1_blurb">
+              <h4 class="project_blurbs">Role: Front-end developer</h2>
+              <p>This is a golf weather app that employs a mobile-first, responsive design. It provides a quick weather-based recommendation on golf conditions at a given location, or whether its suitable to play at all. 
+                </p>
+                <p><i>Tech used - HTML, CSS, Javascript</i></p>
             </div>
           </div>
           <div id="project2">
             <div id="bodyfat-app">
-              <h4 class="project-heading">Bodyfat Calculator</h4>
+      
             <a href="https://youtu.be/0AtGr5YKFcM" target="_blank"><div id="bodyfat-image"></div></a>  
             </div>
+            <div id="project2_blurb">
+              <h4 class="project_blurbs">Role: Full-stack developer</h2>
+              <p>I worked alongside a UX designer to create a one-page web app for healthcare professionals, who would use this in clinic. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The majority of CRUD functionality is complete. Validation and authorisation are in development.</p>
+              <p><i>Tech used - HTML, CSS, Bootstrap, Javascript, NodeJS, Express, MongoDB</i></p>
           </div>
 
         </div>
+      </div>
       </div>
       <div id="contact">
         <h2>Get in Touch</h2>
