heroku website added

--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
           <div id="project2">
             <div id="bodyfat-app">
       
-            <a href="https://youtu.be/0AtGr5YKFcM" target="_blank"><div id="bodyfat-image"></div></a>  
+            <a href="https://shielded-fjord-13046.herokuapp.com/" target="_blank"><div id="bodyfat-image"></div></a>  
             </div>
             <div id="project2_blurb">
               <h4 class="project_blurbs">Role: Full-stack developer</h2>
-              <p>I worked alongside a UX designer to create a one-page web app for healthcare professionals, who would use this in clinic. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The majority of CRUD functionality is complete. Validation and authorisation are in development.</p>
+              <p>I worked alongside a UX designer to create a one-page web app for healthcare professionals, who would use this in clinic. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. I deployed the application to Heroku.</p>
               <p><i>Tech used - HTML, CSS, Bootstrap, Javascript, NodeJS, Express, MongoDB</i></p>
           </div>
 
