about me and project blurb changes

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
           <h2>About me</h2>
           <h3>I'm Kurt Donaldson, a Software Developer</h4>
           <p id="about-blurb">
-            I am a self-taught software developer based in Auckland, New
+            I am a software developer based in Auckland, New
             Zealand. I am currently transitioning careers from physiotherapist
             to software developer. I have also had seven years experience as an
             aircraft maintenance engineer. I have been learning web development
             through several resources, including Udemy, Freecodecamp, Codecademy
-            and MDN. My interests include hiking, golf and diving. I have
-            recently started blogging about my self-taught journey through
+            and MDN. I have recently started a Postgraduate Certificate in Information 
+            Technology at Auckland University. My interests include hiking, golf and diving. I have
+            been blogging about my self-taught journey through
             <a
               id="medium-anchor"
               href="https://medium.com/@kurt.donaldson.nz/publishing-my-portfolio-on-github-ffeaffa6a80b"
@@ -163,7 +164,7 @@
             </div>
             <div id="project2_blurb">
               <h4 class="project_blurbs">Role: Full-stack developer</h2>
-              <p>I worked alongside a UX designer to create a one-page web app for healthcare professionals, who would use this in clinic. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. I deployed the application to Heroku.</p>
+              <p>I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate clients bodyfat percentages and save and track their results. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs.The application was deployed to Heroku.</p>
               <p><i>Tech used - HTML, CSS, Bootstrap, Javascript, NodeJS, Express, MongoDB</i></p>
           </div>
 
