hover icon changes

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             I am a software developer based in Auckland, New
             Zealand. I am currently transitioning careers from physiotherapist
             to software developer. I have also had seven years experience as an
-            aircraft maintenance engineer. I have been learning web development
+            aircraft maintenance engineer. I have been learning software development
             through several resources, including Udemy, Freecodecamp, Codecademy
             and MDN. I have recently started a Postgraduate Certificate in Information 
             Technology at Auckland University. My interests include hiking, golf and diving. I have
@@ -114,27 +114,35 @@
             <h2 id="skills-heading">Skills</h2>
             <div class="icon_container">
               <div class="icons">
+                <div id="html-heading" class="icon-heading">HTML</div>
                 <img id="html-logo" src="icons/icons8-html-5.svg"  alt="html_logo" loading="lazy">
               </div>
               <div class="icons">
+                <div id="css-heading" class="icon-heading">CSS</div>
                 <img id="css-logo" src="icons/icons8-css3.svg"  alt="css_logo" loading="lazy">
               </div>
               <div class="icons">
+                <div id="javascript-heading" class="icon-heading">Javascript</div>
                 <img id="js-logo" src="icons/icons8-javascript.svg"  alt="javascript_logo" loading="lazy">
               </div>
               <div class="icons">
+                <div id="node-heading" class="icon-heading">NodeJS</div>
                 <img id="node-logo" src="icons/icons8-nodejs.svg"  alt="node_logo" loading="lazy">
               </div>
               <div class="icons">
+                <div id="bootstrap-heading" class="icon-heading">Bootstrap</div>
                 <img id="bs-logo" src="icons/icons8-bootstrap.svg"  alt="bootstrap_logo" loading="lazy">
               </div>
               <div class="icons">
+                <div id="mongo-heading" class="icon-heading">MongoDB</div>
                 <img id="mongo-logo" src="icons/icons8-mongodb.svg"  alt="mongodb_logo" loading="lazy">
               </div>
               <div class="icons">
+                <div id="git-heading" class="icon-heading">Git</div>
                 <img id="git-logo" src="icons/icons8-git.svg" alt="git_logo" loading="lazy">
               </div>
               <div class="icons">
+                <div id="github-heading" class="icon-heading">Github</div>
                 <img id="github-logo" src="icons/icons8-github.svg"  alt="github_logo" loading="lazy">
               </div>  
             </div>
@@ -164,7 +172,7 @@
             </div>
             <div id="project2_blurb">
               <h4 class="project_blurbs">Role: Full-stack developer</h2>
-              <p>I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate clients bodyfat percentages and save and track their results. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs.The application was deployed to Heroku.</p>
+              <p>I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate a client's bodyfat percentage and then save and track their results. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The application was deployed to Heroku.</p>
               <p><i>Tech used - HTML, CSS, Bootstrap, Javascript, NodeJS, Express, MongoDB</i></p>
           </div>
 
