--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
           <p id="about-blurb">
             I am a software developer based in Auckland, New
             Zealand. I am currently transitioning careers from physiotherapist
-            to software developer. I have also had seven years experience as an
-            aircraft maintenance engineer. I have been learning software development
+            to software developer. I have been learning software development
             through several resources, including Udemy, Freecodecamp, Codecademy
-            and MDN. I have recently started a Postgraduate Certificate in Information 
+            and MDN. I am currently completing the Postgraduate Certificate in Information 
             Technology at Auckland University. My interests include hiking, golf and diving. I have
             been blogging about my self-taught journey through
             <a
@@ -156,24 +155,29 @@
           <div id="project1">
             <div id="golf-weather-app">
             
-             <a href="https://dancing-muffin-2aa3be.netlify.app/" target="_blank"><div id="golf-image"></div></a> 
+             <div id="golf-image"></div> 
             </div>
             <div id="project1_blurb">
               <h4 class="project_blurbs">Role: Front-end developer</h2>
               <p>This is a golf weather app that employs a mobile-first, responsive design. It provides a quick weather-based recommendation on golf conditions at a given location, or whether its suitable to play at all. 
                 </p>
                 <p><i>Tech used - HTML, CSS, Javascript</i></p>
+                <a href="https://dancing-muffin-2aa3be.netlify.app/" target="_blank"><button class="projectBtns">View Project</button></a> 
+                <a href="https://github.com/kurtdonaldson/golf-weather-app" target="_blank"><button class="projectBtns">View Code</button></a> 
             </div>
           </div>
           <div id="project2">
             <div id="bodyfat-app">
       
-            <a href="https://shielded-fjord-13046.herokuapp.com/" target="_blank"><div id="bodyfat-image"></div></a>  
+            <div id="bodyfat-image"></div>
             </div>
             <div id="project2_blurb">
               <h4 class="project_blurbs">Role: Full-stack developer</h2>
-              <p>I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate a client's bodyfat percentage and then save and track their results. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The application was deployed to Heroku.</p>
+              <p>I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate a 
+                client's bodyfat percentage and then save and track their results. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The application was deployed to Heroku.</p>
               <p><i>Tech used - HTML, CSS, Bootstrap, Javascript, NodeJS, Express, MongoDB</i></p>
+              <a href="https://shielded-fjord-13046.herokuapp.com/" target="_blank"><button class="projectBtns">View Project</button></a> 
+              <a href="https://github.com/kurtdonaldson/new-bodyfat-calculator" target="_blank"><button class="projectBtns">View Code</button></a> 
           </div>
 
         </div>
