--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <h2>About me</h2>
           <h3>I'm Kurt Donaldson, a Software Developer</h4>
           <p id="about-blurb">
-            I am a software developer based in Auckland, New
+            I am a software engineering student based in Auckland, New
             Zealand. I am currently transitioning careers from physiotherapist
             to software developer. I have been learning software development
             through several resources, including Udemy, Freecodecamp, Codecademy
