--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             been blogging about my self-taught journey through
             <a
               id="medium-anchor"
-              href="https://medium.com/@kurt.donaldson.nz/publishing-my-portfolio-on-github-ffeaffa6a80b"
+              href="https://medium.com/@kurt.donaldson.nz"
               >Medium</a
             >.
           </p>
@@ -191,19 +191,21 @@
           <form
             id="form"
           >
-            <input type="text" id="name" name="name" placeholder="Name" />
-            <input type="email" id="email" name="email" placeholder="Email" />
+            <input type="text" id="name" name="name" placeholder="Name" required/>
+            <input type="email" id="email" name="email" placeholder="Email" required/>
             <input
               type="text"
               id="subject"
               name="subject"
               placeholder="Subject"
+              required
             />
             <input
               type="text"
               id="message"
               name="message"
               placeholder="Message"
+              required
             />
             <input type="submit" value="Contact me" id="contact-me" />
           </form>
@@ -223,7 +225,7 @@
         ></a>
         <a href="tel:+64223921209"><i class="fa-solid fa-mobile-screen"></i></a>
         <a
-          href="https://medium.com/@kurt.donaldson.nz/publishing-my-portfolio-on-github-ffeaffa6a80b"
+          href="https://medium.com/@kurt.donaldson.nz"
           target="_blank"
           ><i class="fa-brands fa-medium"></i
         ></a>
