--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <a
               id="medium-anchor"
               href="https://medium.com/@kurt.donaldson.nz"
+              target="_blank"
               >Medium</a
             >.
           </p>
