web scraper added

--- a/index.html
+++ b/index.html
@@ -183,6 +183,23 @@
                 <a href="https://github.com/kurtdonaldson/golf-weather-app" target="_blank"><button class="projectBtns">View Code</button></a> 
             </div>
           </div>
+
+          <div id="project3">
+            <div id="web-scraper-app">
+      
+            <div id="web-scraper-image"></div>
+            </div>
+            <div id="project3_blurb">
+              <h4 class="project_blurbs">Role: Back-end developer</h2>
+              <p>This is a web scraper application designed to provide information on the cryptocurrencies with the highest market values. The app retrieves the most recent data from the CoinMarketCap website and displays it in table format on the browser.
+                The app was deployed to Heroku. 
+              </p>
+              <p><i>Tech used - HTML, Bootstrap, Javascript, NodeJS, Express</i></p>
+              <a href="https://crypto-web-scraper-app.herokuapp.com/" target="_blank"><button class="projectBtns">View Project</button></a> 
+              <a href="https://github.com/kurtdonaldson/mortgage-web-scraper" target="_blank"><button class="projectBtns">View Code</button></a> 
+          </div>
+
+        </div>
           
       </div>
       </div>
