--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div id="web-scraper-image"></div>
             </div>
             <div id="project3_blurb">
-              <h4 class="project_blurbs">Role: Back-end developer</h2>
+              <h4 class="project_blurbs">Role: Full-stack developer</h2>
               <p>This is a web scraper application designed to provide information on the cryptocurrencies with the highest market values. The app retrieves the most recent data from the CoinMarketCap website and displays it in table format on the browser.
                 The app was deployed to Heroku. 
               </p>
