--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
             <div class="project_blurbs" id="project2_blurb">
               <h4 class="project_blurbs">Role: Full-stack developer</h2>
-              <p>I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate a 
+              <p id="project2-p">I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate a 
                 client's bodyfat percentage and then save their results to a database. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The application was deployed to Heroku.</p>
               <p><i>Tech used - HTML, CSS, Bootstrap, Javascript, NodeJS, Express, MongoDB</i></p>
               <a href="https://shielded-fjord-13046.herokuapp.com/" target="_blank"><button class="projectBtns">View Project</button></a> 
@@ -195,7 +195,7 @@
             </div>
             <div class="project_blurbs" id="project1_blurb">
               <h4 class="project_blurbs">Role: Front-end developer</h2>
-              <p>This is a golf weather app that employs a mobile-first, responsive design. It provides a quick weather-based recommendation on golf conditions at a given location, or whether its suitable to play at all. 
+              <p id="project1-p">This is a golf weather app that employs a mobile-first, responsive design. It provides a quick weather-based recommendation on golf conditions at a given location, or whether its suitable to play at all. 
                 </p>
                 <p><i>Tech used - HTML, CSS, Javascript</i></p>
                 <a href="https://dancing-muffin-2aa3be.netlify.app/" target="_blank"><button class="projectBtns">View Project</button></a> 
@@ -210,7 +210,7 @@
             </div>
             <div class="project_blurbs" id="project3_blurb">
               <h4 class="project_blurbs">Role: Full-stack developer</h2>
-              <p>This is a web scraper application designed to provide information on the cryptocurrencies with the highest market values. The app retrieves the most recent data from the CoinMarketCap website and displays it in table format on the browser.
+              <p id="project3-p">This is a web scraper application designed to provide information on the cryptocurrencies with the highest market values. The app retrieves the most recent data from the CoinMarketCap website and displays it in table format on the browser.
                 The app was deployed to Heroku. 
               </p>
               <p><i>Tech used - HTML, Bootstrap, Javascript, NodeJS, Express</i></p>
