postgres icon add

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                 <img class="icon-logos" id="bs-logo" src="icons/icons8-bootstrap.svg"  alt="bootstrap_logo" loading="lazy">
               </div>
               <div id="icon-sql" class="icons">
-                <h3>SQLite</h3>
+                <h3>PostgreSQL</h3>
                 <!-- <div id="github-heading" class="icon-heading">Github</div> -->
-                <img class="icon-logos" id="github-logo" src="icons/sqlite-icon.svg"  alt="github_logo" loading="lazy">
+                <img class="icon-logos" id="postgres-logo" src="/icons/icons8-postgresql.svg"  alt="postgres_logo" loading="lazy">
               </div> 
               <div id="icon-mongo" class="icons">
                 <h3>MongoDB</h3>
