--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="buttons">
-        <a href="https://drive.google.com/file/d/1Uj0T62oVdrSj0KEYw3kQeBF-uNNyftu-/view?usp=sharing" target="_blank"><button id="resume-button">Resume</button></a>
+        <a href="https://drive.google.com/file/d/1idfY_8d6zC4xWa1m8uB8F6k62PE7Wd9H/view?usp=share_link" target="_blank"><button id="resume-button">Resume</button></a>
         <a href="#portfolio"><button id="work-button">My Work</button></a>
       </div>
       <div id="home-page">
