blog project added

--- a/index.html
+++ b/index.html
@@ -172,6 +172,25 @@
         <h2>Portfolio</h2>
         <h3>My Projects</h3>
         <div id="projects">
+
+          <div id="project4">
+            <div id="blog-app">
+      
+            <div id="blog-image"></div>
+            </div>
+            <div class="project_blurbs" id="project4_blurb">
+              <h4 class="project_blurbs">Role: Project lead and Full-stack developer</h2>
+              <p id="project4-p">This blog web-app was part of a university group project. The app was designed to allow a user to view, add, edit and delete a blog article. The app included registration and login functionality. I was assigned project lead for this task. The application was originally completed using the SQLite database. I migrated it
+                to PostgreSQL to allow deployment to a remote PostgreSQL server. The application was deployed to Render.</p>
+              <p><i>Tech used - HTML, CSS, Javascript, Handlebars, Node, Express, PostgreSQL</i></p>
+              <a href="https://uoa-blog-project.onrender.com" target="_blank"><button class="projectBtns">View Project</button></a> 
+              <a href="https://github.com/kurtdonaldson/uoaproject" target="_blank"><button class="projectBtns">View Code</button></a> 
+          </div>
+
+        </div>
+
+
+
           <div id="project2">
             <div id="bodyfat-app">
       
