--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@
           <h2>About me</h2>
           <h3>I'm Kurt Donaldson, a Software Developer</h4>
           <p id="about-blurb">
-            I am a software engineering student based in Auckland, New
-            Zealand. I am currently transitioning careers from physiotherapist
-            to software developer. I have been learning software development
-            through several resources, including Udemy, Freecodecamp, Codecademy
-            and MDN. I am currently completing the Postgraduate Certificate in Information 
-            Technology at Auckland University. My interests include hiking, golf and diving. I have
+            I am a self-taught software engineering student based in Auckland, New
+            Zealand. I am transitioning careers from physiotherapist
+            to software developer. I am currently completing the Postgraduate Certificate in Information 
+            Technology at the University of Auckland in order to formalise my training and learn new skills. My interests include hiking, golf and diving. I have
             been blogging about my self-taught journey through
             <a
               id="medium-anchor"
@@ -222,7 +220,7 @@
             </div>
           </div>
 
-          <div id="project3">
+          <!-- <div id="project3">
             <div id="web-scraper-app">
       
             <div id="web-scraper-image"></div>
@@ -237,7 +235,7 @@
               <a href="https://github.com/kurtdonaldson/crypto-web-scraper" target="_blank"><button class="projectBtns">View Code</button></a> 
           </div>
 
-        </div>
+        </div> -->
           
       </div>
       </div>
