new bodyfat link

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
             <div class="project_blurbs" id="project2_blurb">
               <h4 class="project_blurbs">Role: Full-stack developer</h2>
               <p id="project2-p">I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate a 
-                client's bodyfat percentage and then save their results to a database. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The application was deployed to Heroku.</p>
+                client's bodyfat percentage and then save their results to a database. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The application was deployed to Render.</p>
               <p><i>Tech used - HTML, CSS, Bootstrap, Javascript, NodeJS, Express, MongoDB</i></p>
-              <a href="https://shielded-fjord-13046.herokuapp.com/" target="_blank"><button class="projectBtns">View Project</button></a> 
+              <a href="https://bodyfat-calculator.onrender.com" target="_blank"><button class="projectBtns">View Project</button></a> 
               <a href="https://github.com/kurtdonaldson/new-bodyfat-calculator" target="_blank"><button class="projectBtns">View Code</button></a> 
           </div>
 
