--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <p id="project2-p">I worked alongside a UX designer to create a full-stack web app with CRUD (create, read, update, delete) functionality and authorisation and authentication. The app was desgined for healthcare professionals, in order to calculate a 
                 client's bodyfat percentage and then save their results to a database. After multiple iterations and user testing we settled on an MVP that meets basic calculation needs. The application was deployed to Render.</p>
               <p><i>Tech used - HTML, CSS, Bootstrap, Javascript, NodeJS, Express, MongoDB</i></p>
-              <a href="https://bodyfat-calculator.onrender.com" target="_blank"><button class="projectBtns">View Project</button></a> 
+              <a href="https://bodyfat-calulator.onrender.com" target="_blank"><button class="projectBtns">View Project</button></a> 
               <a href="https://github.com/kurtdonaldson/new-bodyfat-calculator" target="_blank"><button class="projectBtns">View Code</button></a> 
           </div>
 
