--- a/index.html
+++ b/index.html
@@ -220,22 +220,22 @@
             </div>
           </div>
 
-          <!-- <div id="project3">
-            <div id="web-scraper-app">
+          <div id="project3">
+            <div id="limitless-app">
       
-            <div id="web-scraper-image"></div>
+            <div id="limitless-image"></div>
             </div>
             <div class="project_blurbs" id="project3_blurb">
-              <h4 class="project_blurbs">Role: Full-stack developer</h2>
-              <p id="project3-p">This is a web scraper application designed to provide information on the cryptocurrencies with the highest market values. The app retrieves the most recent data from the CoinMarketCap website and displays it in table format on the browser.
-                The app was deployed to Heroku. 
+              <h4 class="project_blurbs">Role: Front-end developer</h2>
+              <p id="project3-p">This is a website built for a private practice physiotherapy clinic. It employs a mobile first, responsive design. The website includes a contact form and links to a
+                online booking system. The application was deployed to Vercel.
               </p>
-              <p><i>Tech used - HTML, Bootstrap, Javascript, NodeJS, Express</i></p>
-              <a href="https://crypto-web-scraper-app.herokuapp.com/" target="_blank"><button class="projectBtns">View Project</button></a> 
-              <a href="https://github.com/kurtdonaldson/crypto-web-scraper" target="_blank"><button class="projectBtns">View Code</button></a> 
+              <p><i>Tech used - HTML, Bootstrap, Javascript, React</i></p>
+              <a href="https://www.limitlessphysio.co.nz" target="_blank"><button class="projectBtns">View Project</button></a> 
+              <a href="https://github.com/kurtdonaldson/limitless-website" target="_blank"><button class="projectBtns">View Code</button></a> 
           </div>
 
-        </div> -->
+        </div>
           
       </div>
       </div>
