limitless blurb change

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
             <div class="project_blurbs" id="project3_blurb">
               <h4 class="project_blurbs">Role: Front-end developer</h2>
-              <p id="project3-p">This is a website built for a private practice physiotherapy clinic. It employs a mobile first, responsive design. The website includes a contact form and links to a
+              <p id="project3-p">This is a website built for a private practice physiotherapy clinic. It employs a mobile first, responsive design. The website includes a contact form and links to an
                 online booking system. The application was deployed to Vercel.
               </p>
               <p><i>Tech used - HTML, Bootstrap, Javascript, React</i></p>
